[package]
name = "webgpu_check"
description = "A panic hook which replaces an HTML element with a bug report form."
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/loopystudios/webgpu_check"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ['Window', 'Navigator', 'Gpu'] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.42"
web-sys = { version = "0.3", features = [
    'Window',
    'Document',
    'HtmlElement',
    'Navigator',
    'Gpu',
] }


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
notify-rust = "4.11.0"
